[package]
name = "eatmail"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["email", "smtp", "mail", "server", "spam"]
description = "Temporary e-mail server"
repository = "https://github.com/psarna/eatmail"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
libsql-client = "0.24"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
